=== 1.2.0 / 2016-08-08

* 1 major enhancement

  * reworked bwanschreiben.tex (entityfile.rb and letter.rb)

=== 1.1.4 / 2016-08-06

* 1 minor enhancement

  * updated dependencies from gemnasium

=== 1.1.3 / 2016-02-08

* 1 minor enhancement

  * updated dependencies from gemnasium

=== 1.1.2 / 2016-02-03

* 3 minor enhancement

  * added three targetblocks (support,doku,kaufm) for three kind of jobs.
  * now pdf reader can configured in the config
  * added signature to the outgoing mail

=== 1.1.1 / 2015-10-21

* 1 minor enhancement

  * cleanup code

=== 1.1.0 / 2015-10-20

* 3 minor enhancements

  * LCV-7: Add mailer
  * LCV-9: latexcv.rb: Use not File.expand
  * LCV-10: Build a upgrade option

=== 1.0.0 / 2015-10-03

* 1 bug fix

  * Fixed install routine

* 3 feature requests

  * fix LCV-6: Added LatexCurriculumVitae::Letter (Class for compile the motivational letter)
  * fix LCV-7: Allow to name the pdf output file (instead of hardcoded "Bewerbungsunterlagen_Manns")
  * fix LCV-8: Make LCV more dynamic (added variable "letter". If this is set, the program merges the motivational
    letter with the cv.
  * Extended gui for asking about street and city (company)
  * Added 4 variables to latex_curriculum_vitae.cfg: name_of_letter, name_of_resume, name_of_cover and name_of_pdf.
  * Extended personal_data.tex for containing all relevant infos for compiling the letter and the cover.
  * Changed LaTEX sources for using the personal_data.tex to build the cover and the letter.
  * Reworked documentation

=== 0.1.3 / 2015-09-05

* 2 minor enhancements

  * The installed gem doesn't use $HOME for sysconfdir
  * fixed color issue

=== 0.1.1 / 2015-09-04

* 1 major enhancement

  * Birthday!

