@@ -175,10 +175,10 @@ SASCHA MANNS}
 %\opening{Sehr geehrter \Ansprechpartner,}
 \opening{\introduction}
 \intro{}
-Zuletzt war ich bei der XCOM AG in Andernach als Autor für Geschäftsprozess- und Anwendungsdokumentation tätig. Hier zählten sämtliche Arbeiten rund um die Dokumentaton zu meinem Aufgabengebiet.\\
-Besonders reizt mich die Aussicht auf fachliche und persönliche Entwicklungsmöglichkeiten in ihrem Unternehmen. Aufgrund Ihrer Ausrichtung und Ihres guten Rufes in der Branche bin ich sehr an einer Beschätigung in Ihren Hause interessiert. Der Eindruck, den ich in den Medien von Ihrem Unternehmen gewonnen habe, lässt mich glauben, dass ich gut ins Team passe.\\
+Zuletzt war ich bei der XCOM AG in Andernach als Autor für Geschäftsprozess- und Anwendungsdokumentation tätig. Hier zählten sämtliche Arbeiten rund um die Dokumentaton zu meinem Aufgabengebiet.\\\\
+Besonders reizt mich die Aussicht auf fachliche und persönliche Entwicklungsmöglichkeiten in ihrem Unternehmen. Aufgrund Ihrer Ausrichtung und Ihres guten Rufes in der Branche bin ich sehr an einer Beschätigung in Ihren Hause interessiert. Der Eindruck, den ich in den Medien von Ihrem Unternehmen gewonnen habe, lässt mich glauben, dass ich gut ins Team passe.\\\\
 \targetblock{}
-Meine Erfahrungen und Fähigkeiten würde ich gerne bei Ihnen einsetzen. Besonders hervorheben möchte ich hierbei meine zuverlässig, verantwortungsbewusst und präzise Arbeitsweise. Frühere Kollegen und Vorgesetzte haben an mir geschätzt, dass ich als Mitarbeiter flexibel, motiviert und teamorientiert bin. Darüber hinaus zeichne ich mich durch ausgeprägte Kommunikationsstärke, hohe Lernbereitschaft und viel Kreativität aus.\\
+Meine Erfahrungen und Fähigkeiten würde ich gerne bei Ihnen einsetzen. Besonders hervorheben möchte ich hierbei meine zuverlässig, verantwortungsbewusst und präzise Arbeitsweise. Frühere Kollegen und Vorgesetzte haben an mir geschätzt, dass ich als Mitarbeiter flexibel, motiviert und teamorientiert bin. Darüber hinaus zeichne ich mich durch ausgeprägte Kommunikationsstärke, hohe Lernbereitschaft und viel Kreativität aus.\\\\
 Ich danke Ihnen für das Interesse an meiner Bewerbung. Zum nächstmöglichen Zeitpunkt bin ich verfügbar. Wenn Sie mehr von mir erfahren möchten, freue ich mich über eine Einladung zum Vorstellungsgespräch.
 
 \closing{Mit freundlichen Grüßen}
