@@ -36,7 +36,7 @@ pdfkeywords={Manns, Mayen, Bewerbung, IT, Community, Linux, Programmierer, Dispa
 \addbibresource{../Appendix/Bibliography/bibliography1.bib} % Specify the bibliography file to include publications
 
 \begin{document}
-\includepdf{../Cover/Cover}
+%\includepdf{../Cover/Cover}
 
 \header{Sascha K. }{Manns}{Supporter/Autor/Schriftsteller} % Your name and current job title/field
 
