@@ -58,7 +58,6 @@ module LatexCurriculumVitae
   # Final create and shrinking
   FileUtils.cd(tmpdir) do
     LatexCurriculumVitae::CV.create_final_cv(letter, name_of_letter, name_of_resume, name_of_pdf, name_of_cover)
-    #LatexCurriculumVitae::CV.shrink_cv(name_of_pdf)
     LatexCurriculumVitae::CV.copy_home(name_of_pdf)
   end
 
